DATE        AUTHOR    CHANGE
----------- --------- ---------------------------------------------------------
[Version 1.0.3 - 11.26.2001]===================================================
Nov-16-2001 allenb    Fixed memory bug in aMotionStar.
Nov-15-2001 cjust     Resolved VjControl problems with Java 1.4 caused by
                      changes to the JDK's JComboBox semantics.
Oct-28-2001 cjust     Patched to prevent errors caused by device drivers
                      not overriding getPosUpdateTime.
Oct-17-2001 kevn      Fixed bug where vjGetVjMatrix returns the wrong 
                      conversion.
Aug-29-2001 patrick   We build shared libraries on HP-UX 11.x now (submitted by
                      Daniel Heath <DHeath@fueltechnv.com>).

[Version 1.0.2 - 8.6.2001]=====================================================
Jul-24-2001 cjust     Fixed a redraw bug in VjControl that happened when
                      updating the Active chunkdb from a network connection.
                      This could cause the status bar label or the chunkdb's
                      JTree to be shifted to the upper-left corner of the
                      VjControl window.
Jul-05-2001 patrick   Fixed the TrackdSensor and TrackdController chunk
                      descriptions so that min and max are correctly listed
                      with TrackdController.
Jun-28-2001 patrick   The POSIX thread wrapper no longer calls pthread_exit(3)
                      in its destructor.  For stack-allocated vjThread objects
                      (using pthreads), this caused the wrong thread to exit
                      when the object went out of scope.

[Version 1.0.1 - 6.14.2001]====================================================
Jun-13-2001 patrick   Added a script called juggler-config that users can run
                      to get compiler and linker options needed for building
                      against VR Juggler